[project]
name = "imessage-mcp"
version = "0.1.0"
description = "MCP server exposing iMessage read/send on macOS"
requires-python = ">=3.12"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
imessage-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
